--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,4 @@
-streamlit
-sqlite3  # This is part of Python’s standard library, so it’s not needed in requirements.txt
-pandas
-bcrypt
-matplotlib
+streamlit>=1.0.0
+pandas>=1.3.0
+bcrypt>=3.2.0
+matplotlib>=3.4.0
